Add support for `TTL` command to `RedisService`
Implemented the `TTLHandler` to handle the `TTL` command, which retrieves the remaining time to live for a key. Updated `MessageTypes` and added `TTLMessage` for protocol parsing. Improved error messages in `ByteBufUtils` and added validation for negative expire times in `SetEXMessage`.